maze.lessons.maze.island.IslandMaze.scala.error
Escaper:20: error: ';' expected but 'else' found.
    }else{
     ^Escaper:31: error: Unmatched closing brace '}' ignored here
}
^